@@ -1,3 +1,11 @@
+TAGDATETBC 1.2.0 Changes
+    * BREAKING CHANGES
+        * A top level command either -new or -pend is required to run the appliaction. Previously -new was assumed and led to strange behaviour when run without any command line options.
+
+    * Updated Documentation
+    * Added input validation 
+    * Refactored CLI logic
+
 20210205 1.1.1 Fixed printf in webenrollmentnewrequest
 20210205 1.1.0 Added Versioning
 
